2009-06-12  Hans Boehm <Hans.Boehm@hp.com> (Really mostly George Talbot)
	* include/gc_allocator.h: Add gc_allocator_ignore_off_page.
	* tests/test_cpp.cc: Add call to gc_allocator_ignore_off_page.

2009-06-11  Hans Boehm <Hans.Boehm@hp.com>
	* win32_threads.c (GC_release_mark_lock): Correct misspelling of
	AO_load in assertion.

2009-06-11  Hans Boehm <Hans.Boehm@hp.com> (Really mostly Ivan Maidanski)
	(diff93_cvs: resembling diff27, diff30, diff43, diff44, diff66,
	diff76, diff79, diff83 partly)

        * win32_threads.c (MAX_THREADS): Define as 1 if GC_win32_dll_threads
        is defined as FALSE (otherwise the size of dll_thread_table is near
        200 KiB for 32-bit).
        * win32_threads.c (GC_use_DllMain): Optimize for THREAD_LOCAL_ALLOC.
        * win32_threads.c (GC_Thread_Rep): Add backing_store_end and
        backing_store_ptr fields for IA64 support.
        * win32_threads.c (GC_register_my_thread_inner): Set
        backing_store_end field to reg_base value for IA64 (same as in
        pthread_support.c).
        * win32_threads.c (SET_PTHREAD_MAP_CACHE): Put parentheses in the
        "right" places, remove ';'.
        * win32_threads.c (GC_fault_handler_lock): Declare only
        if MPROTECT_VDB (and not WinCE).
        * win32_threads.c (GC_suspend): Acquire and release
        GC_fault_handler_lock only if MPROTECT_VDB (and not WinCE).
        * win32_threads.c (GC_suspend): Define as STATIC.
        * win32_threads.c (GC_push_stack_for): Fix WARN() format specifier
        (should be word-complient, "%p" is used w/o "0x"), don't cast sp.
        * win32_threads.c (GC_push_all_stacks): Convert a group of printf()
        calls into a single one (for output atomicity).
        * win32_threads.c (GC_get_next_stack): Unprotect thread descriptor
        before altering its last_stack_min ("thread" variable is added).
        * win32_threads.c (GC_get_next_stack): Remove unnecessary checks for
        "s" is non-NULL. 